Commit message: "Add content summarization template and link to it in index.html"

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <!-- Content here -->
         <div id="templates" class="list-group">
-            <a href="#" class="list-group-item list-group-item-action">Task Template 1</a>
+            <a href="/content-summarization.html" class="list-group-item list-group-item-action">Content Summarization</a>
             <a href="#" class="list-group-item list-group-item-action">Task Template 2</a>
             <a href="#" class="list-group-item list-group-item-action">Task Template 3</a>
         </div>
